Fix z-index bug.

--- a/themes/finna/less/bootstrap/finna/finnaicons.less
+++ b/themes/finna/less/bootstrap/finna/finnaicons.less
@@ -48,7 +48,6 @@
         & img {
             box-shadow: 0px 0px 0px 4px @gray-lighter inset;
             position: relative;
-            z-index: 1;
             width: 100%;
         }
     
